--- a/TravelAgency/TravelAgency/Views/Home/SiteInformation.cshtml
+++ b/TravelAgency/TravelAgency/Views/Home/SiteInformation.cshtml
@@ -5,3 +5,67 @@
         Мы заботимся о каждом клиенте, предоставляя высококачественный сервис, начиная с подбора тура и заканчивая поддержкой на каждом этапе вашего путешествия. Нам доверяют, потому что мы создаем отдых, о котором вы мечтали!
     </p>
 </div>
+
+    
+    <div class="container-section scroll" id="services">
+        <h2 class="info-sections">Наши услуги</h2>
+        <div class="card-container">
+            <div class="arrow left">&#10094;</div>
+
+            <div class="card-wrapper">
+                <div class="card">
+                    <img src="~/images/card_1.png" alt="Card 1">
+
+                    <h3>Индивидуальные туры на заказ </h3>
+                    <p>
+                        Мы разработаем уникальный маршрут, полностью отвечающий вашим предпочтениям: от планирования до сопровождения.
+                        Варианты могут включать гастрономические туры, экскурсии по культурным достопримечательностям или активный отдых.
+                    </p>
+                </div>
+                <div class="card">
+                    <img src="~/images/card_2.png" alt="Card 2">
+
+                    <h3>Групповые туры</h3>
+                    <p>
+                        Присоединяйтесь к захватывающим путешествиям в компании единомышленников. Мы предлагаем туры в различные страны с профессиональными гидами.
+                    </p>
+                </div>
+                <div class="card">
+                    <img src="~/images/card_3.png" alt="Card 3">
+
+                    <h3>Пляжные туры</h3>
+                    <p>
+                        Лучшие пляжные направления мира с белоснежными песками и кристально чистой водой. Мы предложим вам незабываемый отдых
+                        на курортах Средиземного моря, Мальдивских островов, Таиланда и других райских уголков.
+                    </p>
+                </div>
+                <div class="card">
+                    <img src="~/images/card_4.png" alt="Card 4">
+
+                    <h3>Экскурсионные туры</h3>
+                    <p>
+                        Откройте для себя культурные и исторические достопримечательности мира. Наши экскурсионные туры включают профессиональных гидов и тщательно
+                        продуманные маршруты, которые оставят неизгладимые впечатления.
+                    </p>
+                </div>
+                <div class="card">
+                    <img src="~/images/card_5.png" alt="Card 5">
+
+                    <h3>Аренда жилья и автомобилей</h3>
+                    <p>
+                        Забронируйте комфортное жилье или автомобиль для самостоятельных путешествий. Мы сотрудничаем с крупнейшими платформами для аренды по всему миру.
+                    </p>
+                </div>
+                <div class="card">
+                    <img src="~/images/card_6.png" alt="Card 6">
+
+                    <h3>Романтические путешествия и медовый месяц</h3>
+                    <p>
+                        Мы поможем вам спланировать идеальное романтическое путешествие или медовый месяц в самых живописных уголках мира.
+                    </p>
+                </div>
+            </div>
+
+            <div class="arrow right">&#10095;</div>
+        </div>
+    </div>
