--- a/TravelAgency/TravelAgency/Views/Home/SiteInformation.cshtml
+++ b/TravelAgency/TravelAgency/Views/Home/SiteInformation.cshtml
@@ -14,7 +14,7 @@
 
             <div class="card-wrapper">
                 <div class="card">
-                    <img src="~/images/card_1.png" alt="Card 1">
+                    <img src="~/images/fff.webp" alt="Card 1">
 
                     <h3>Индивидуальные туры на заказ </h3>
                     <p>
@@ -65,7 +65,44 @@
                     </p>
                 </div>
             </div>
+            <div class="container-section scroll" id="contact">
 
+                <h2 class="info-sections">Контакты</h2>
+                <div class="container-row">
+                    <div class="row-item">
+                        <img class="item-img" src="~/images/icon-email.png" alt="" />
+                        <h2>Email</h2>
+                        <p>TTIiP@mail.ru</p>
+                    </div>
+                    <div class="row-item">
+                        <img class="item-img" src="~/images/icon-phone.png" alt="" />
+                        <h2>Телефон</h2>
+                        <p>(+373) 777-77-777</p>
+                    </div>
+                    <div class="row-item">
+                        <img class="item-img" src="~/images/icon-address.png" alt="" />
+                        <h2>Адрес</h2>
+                        <p>Тираспольский техникум информатики и права</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container-section">
+                <h2 class="info-sections">Hanиcaть сообение</h2>
+                <div class="block-message">
+                    <p>
+                        Вы можете написать нам на почту здесь
+                    </p>
+                        <div class="message-text">
+                            <label>Cooбщение:</label>
+                            <span></span>
+                            <textarea class="text"></textarea>
+                        </div>
+                        <div class="message-button">
+                            <button class="button" type="submit">Oтnpaвить</button>
+                        </div>
+                </div>
+            </div>
             <div class="arrow right">&#10095;</div>
         </div>
-    </div>
+        </div>
