--- a/TravelAgency/TravelAgency/Views/Shared/_Layout.cshtml
+++ b/TravelAgency/TravelAgency/Views/Shared/_Layout.cshtml
@@ -4,17 +4,18 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - TravelAgency</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+   @* <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />*@
     <link rel="stylesheet" href="~/css/shared_script.js" />
     <link rel="stylesheet" href="~/css/Shared.css" />
     <link rel="stylesheet" href="~/css/home.css" />
+    
 </head>
 <body>
-
+    @await Html.PartialAsync("_LoginRegistrationPartial")
     <div id="header-top">
         <div class="logo">Мир путешествий</div>
         <div class="button-header">
-            <button class="button">Войти</button>
+            <button class="button" id="click-to-hide">Войти</button>
         </div>
     </div>
     <img class="img-header" src="~/images/Designer.jpg" />
@@ -33,16 +34,32 @@
         @RenderBody()
     </div>
 
-    @*<footer class="border-top footer text-muted">
-            <div class="container">
-                &copy; 2024 - TravelAgency - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+    <footer>
+        <div class="footer-left">
+            <div class="logo">Мир Путешествий</div>
+            <p>
+            </p>
+            Мы - туристическое агентство, которое помогает воплощать мечты о путешествиях в реальность.
+            Предлагаем широкий выбор туров по популярным и экзотическим направлениям. Мы заботимся о каждом клиенте, предоставляя индивидуальные консультации и лучший сервис.
+            <div class="footer-TravelAgency">
+                &copy; 2024 - TravelAgency - Siglov
             </div>
-        </footer>
-        <script src="~/lib/jquery/dist/jquery.min.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="~/js/site.js" asp-append-version="true"></script>
-        @await RenderSectionAsync("Scripts", required: false)*@
+        </div>
+        <div class="footer-right">
+            <div class="menu">
+                <ul>
+                    
+                    <li><a href="#home">Главная</a></li>
+                    <li><a href="#contact">KOHTAKTы</a></li> 
+                    <li><a href="#countries">Страны</a></li>
+                    <li><a href="#services">уcлyrи</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+
     <script src="~/js/home_script.js"></script>
     <script src="~/css/shared_script.js"></script>
+    <script src="~/js/login_and_registration_script.js"></script>
 </body>
 </html>
