--- a/TravelAgency/TravelAgency/wwwroot/css/Shared.css
+++ b/TravelAgency/TravelAgency/wwwroot/css/Shared.css
@@ -143,3 +143,27 @@ display: flex;
     font-size: 20px;
     color: #370b0b;
 }
+
+footer {
+    background-color: rgba(255, 165, 0, 1);
+    width: 100%;
+    padding-top: 60px;
+    margin-top: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+footer .footer-left {
+        width: 40%;
+        display: grid;
+        gap: 20px;
+ }
+
+footer .footer-right {
+    width: 30%;
+}
+
+.footer-TravelAgency {
+    margin-bottom: 20px;
+}
