--- a/TravelAgency/TravelAgency/wwwroot/css/home.css
+++ b/TravelAgency/TravelAgency/wwwroot/css/home.css
@@ -124,3 +124,43 @@
         margin: 5px;
         width: 100px;
 }
+
+.block-message {
+    display: grid;
+    width: 80%;
+}
+.message-button
+ {
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+.message-text {
+    display: grid;
+    padding: 10px;
+    margin-top: 20px;
+}
+
+.message-text .text {
+    height: 150px;
+    resize: none;
+}
+
+.message-button .button {
+    border: none;
+    background-color: rgba(255, 165, 3, 1);
+    padding: 15px 30px;
+    border-radius: 3px;
+    color: #370beb;
+    cursor: pointer;
+    font-size: 18px;
+    font-weight: 600;
+    transition: all 250ms ease;
+}
+    .message-button .button:hover {
+        color: #fff;
+        background-color: #370b0b;
+    }
+
+/* Стили для футера */
