Сделал пару практических

--- a/TravelAgency/TravelAgency/Views/Shared/_Layout.cshtml
+++ b/TravelAgency/TravelAgency/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
 <body>
     @await Html.PartialAsync("_LoginRegistrationPartial")
     <div id="header-top">
+        <div id="hamburger" class="icon">&#9776;</div>
         <div class="logo">Мир путешествий</div>
         <div class="button-header">
             <button class="button" id="click-to-hide">Войти</button>
