--- a/TravelAgency/TravelAgency/wwwroot/css/Shared.css
+++ b/TravelAgency/TravelAgency/wwwroot/css/Shared.css
@@ -143,7 +143,6 @@ display: flex;
     font-size: 20px;
     color: #370b0b;
 }
-
 footer {
     background-color: rgba(255, 165, 0, 1);
     width: 100%;
@@ -153,17 +152,17 @@ footer {
     align-items: center;
     justify-content: space-around;
 }
-
 footer .footer-left {
         width: 40%;
         display: grid;
         gap: 20px;
  }
-
 footer .footer-right {
     width: 30%;
 }
-
 .footer-TravelAgency {
     margin-bottom: 20px;
+}
+.icon{
+    display:none;
 }
