--- a/TravelAgency/TravelAgency/Views/Shared/_Layout.cshtml
+++ b/TravelAgency/TravelAgency/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
             Мы - туристическое агентство, которое помогает воплощать мечты о путешествиях в реальность.
             Предлагаем широкий выбор туров по популярным и экзотическим направлениям. Мы заботимся о каждом клиенте, предоставляя индивидуальные консультации и лучший сервис.
             <div class="footer-TravelAgency">
-                &copy; 2024 - TravelAgency - Siglov
+                &copy; 2024 - TravelAgency
             </div>
         </div>
         <div class="footer-right">
