--- a/TravelAgency/TravelAgency/wwwroot/css/media_style.css
+++ b/TravelAgency/TravelAgency/wwwroot/css/media_style.css
@@ -92,35 +92,33 @@
         margin-top: 80px;
         display: grid;
     }
-        .block
+    .block {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+    footer .footer-left {
+        width: 100%;
+        gap: 20px;
+    }
+    /*вход/регистрация*/
+    .block-container {
+        width: 400px !important;
+        height: 650px !important;
+        padding: 0 !important;
+    }
 
-{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-footer .footer-left {
-    width: 100%;
-    gap: 20px;
-}
-/*вход/регистрация*/
-.block-container {
-    width: 400px;
-    height: 650px;
-    padding: 0;
-}
-.form-box {
-    width: 100%;
-    height: 500px;
-    box-shadow: none;
-    top: 0;
-}
-    .form-box.active
+    .form-box {
+        width: 100% !important;
+        height: 500px !important;
+        box-shadow: none !important;
+        top: 0 !important;
+    }
 
-{
-    top: 150px;
-    left: 0;
-}
+    .form-box.active {
+        top: 150px !important;
+        left: 0 !important;
+    }
 }
 @media(max-width:600px){
     .card-wrapper{
