сделал пару практических

--- a/TravelAgency/TravelAgency/Views/Home/SiteInformation.cshtml
+++ b/TravelAgency/TravelAgency/Views/Home/SiteInformation.cshtml
@@ -1,14 +1,17 @@
 ﻿<div class="container-section">
     <h2 class="info-section">О нас</h2>
     <p>
-        Добро пожаловать в туристическое агентство "Мир Путешествий" — ваше окно в удивительный мир приключений и незабываемых впечатлений! Мы предлагаем индивидуальные туры и готовые путевки по самым захватывающим направлениям по всему миру. Наша команда экспертов поможет вам подобрать идеальный отдых, исходя из ваших предпочтений и бюджета.
-        Мы заботимся о каждом клиенте, предоставляя высококачественный сервис, начиная с подбора тура и заканчивая поддержкой на каждом этапе вашего путешествия. Нам доверяют, потому что мы создаем отдых, о котором вы мечтали!
+        Добро пожаловать в книжный магазин "Читальный Мир" — ваш проводник в мир литературы!
+        Мы предлагаем широкий выбор книг на любой вкус: от классики до современных бестселлеров.
+        Наша команда поможет выбрать идеальное произведение, учитывая ваши предпочтения. Мы ценим каждого клиента, обеспечивая отличный сервис и приятную атмосферу.
+        "Читальный Мир" — здесь книги вдохновляют и открывают новые горизонты!
+
     </p>
 </div>
 
     
     <div class="container-section scroll" id="services">
-        <h2 class="info-sections">Наши услуги</h2>
+        <h2 class="info-sections">Жанры наших книг</h2>
         <div class="card-container">
             <div class="arrow left">&#10094;</div>
 
@@ -16,52 +19,63 @@
                 <div class="card">
                     <img src="~/images/fff.webp" alt="Card 1">
 
-                    <h3>Индивидуальные туры на заказ </h3>
+                    <h3>Фантастика (Science Fiction) </h3>
                     <p>
-                        Мы разработаем уникальный маршрут, полностью отвечающий вашим предпочтениям: от планирования до сопровождения.
-                        Варианты могут включать гастрономические туры, экскурсии по культурным достопримечательностям или активный отдых.
+                        Жанр, в котором описываются события, основанные на научных открытиях или гипотетических научных принципах. 
+                        Часто это миры будущего, космические исследования, искусственный интеллект или альтернативные реальности. 
+                        Пример: "2001 год: Космическая одиссея" Артура Кларка.
                     </p>
                 </div>
                 <div class="card">
                     <img src="~/images/card_2.png" alt="Card 2">
 
-                    <h3>Групповые туры</h3>
+                    <h3>Фэнтези (Fantasy) </h3>
                     <p>
-                        Присоединяйтесь к захватывающим путешествиям в компании единомышленников. Мы предлагаем туры в различные страны с профессиональными гидами.
+                        Жанр, в котором миры наполнены магией, мифическими существами и необычными силами.
+                        В этих произведениях часто используются элементы средневекового фольклора, магические артефакты и герои, способные творить чудеса.
+                        Пример: "Властелин колец" Дж. Р. Р. Толкиена.
                     </p>
                 </div>
                 <div class="card">
                     <img src="~/images/card_3.png" alt="Card 3">
 
-                    <h3>Пляжные туры</h3>
+                    <h3>Хоррор (Horror)</h3>
                     <p>
-                        Лучшие пляжные направления мира с белоснежными песками и кристально чистой водой. Мы предложим вам незабываемый отдых
-                        на курортах Средиземного моря, Мальдивских островов, Таиланда и других райских уголков.
+                        Жанр, вызывающий страх и ужас. Это могут быть истории о привидениях, монстрах, зомби или мистических существах.
+                        Главная цель хоррора – пробудить у читателя чувство тревоги и страха через элементы ужаса и сверхъестественного.
+                        Пример: "Сияние" Стивена Кинга.
                     </p>
                 </div>
                 <div class="card">
                     <img src="~/images/card_4.png" alt="Card 4">
 
-                    <h3>Экскурсионные туры</h3>
+                    <h3>Романтика (Romance)</h3>
                     <p>
-                        Откройте для себя культурные и исторические достопримечательности мира. Наши экскурсионные туры включают профессиональных гидов и тщательно
-                        продуманные маршруты, которые оставят неизгладимые впечатления.
+                       Жанр, сосредоточенный на любовных отношениях между персонажами. 
+                        Эти произведения часто описывают эмоциональные переживания героев, поиски любви и внутреннюю трансформацию.
+                        Хотя многие романы заканчиваются счастливым концом, они могут включать трудности, с которыми сталкиваются влюбленные.
+                        Пример: "Гордость и предубеждение" Джейн Остин.
                     </p>
                 </div>
                 <div class="card">
                     <img src="~/images/card_5.png" alt="Card 5">
 
-                    <h3>Аренда жилья и автомобилей</h3>
+                    <h3>Ужасы (Supernatural Horror)</h3>
                     <p>
-                        Забронируйте комфортное жилье или автомобиль для самостоятельных путешествий. Мы сотрудничаем с крупнейшими платформами для аренды по всему миру.
+                        Жанр, где ужасы тесно переплетаются с элементами сверхъестественного. 
+                        Это могут быть рассказы о духах, монстрах, проклятиях или мистических явлениях, которые создают атмосферу страха и тревоги.
+                        Пример: "Доктор Смерть" Стивена Кинга.
                     </p>
                 </div>
                 <div class="card">
                     <img src="~/images/card_6.png" alt="Card 6">
 
-                    <h3>Романтические путешествия и медовый месяц</h3>
+                    <h3>Триллер (Thriller) </h3>
                     <p>
-                        Мы поможем вам спланировать идеальное романтическое путешествие или медовый месяц в самых живописных уголках мира.
+                        Жанр, построенный на повышенном напряжении и чувстве страха. 
+                        Триллеры часто включают элементы криминала, шпионских историй, погонь или жестоких преступлений. 
+                        Важной частью является ощущение неизбежной угрозы для героя.
+                        Пример: "Молчание ягнят" Томаса Харриса.
                     </p>
                 </div>
             </div>
@@ -90,7 +104,7 @@
             </div>
 
             <div class="container-section">
-                <h2 class="info-sections">Hanиcaть сообение</h2>
+                <h2 class="info-sections">Haпиcaть сообение</h2>
                 <div class="block-message">
                     <p>
                         Вы можете написать нам на почту здесь
@@ -101,7 +115,7 @@
                         <textarea class="text"></textarea>
                     </div>
                     <div class="message-button">
-                        <button class="button" type="submit">Oтnpaвить</button>
+                        <button class="button" type="submit">Oтпpaвить</button>
                     </div>
                 </div>
             </div>
