--- a/TravelAgency/TravelAgency/wwwroot/css/Shared.css
+++ b/TravelAgency/TravelAgency/wwwroot/css/Shared.css
@@ -43,7 +43,7 @@ body {
     top: 0; /* Располагаем шапку вверху экрана */
     width: 100%; /* Ширина 100% от родительского элемента */
     z-index: 500; /* Устанавливаем слой для наложения */
-    background: rgba(255, 165, 0, 0); /* Прозрачный фоновый цвет */
+    background: rgba(210, 180, 140); /* Прозрачный фоновый цвет */
     display: flex; /* Используем Flexbox для выравнивания содержимого */
     justify-content: space-between; /* Распределяем элементы по краям */
     padding: 25px 70px; /* Отступы внутри шапки */
@@ -147,7 +147,7 @@ display: flex;
     color: #370b0b;
 }
 footer {
-    background-color: rgba(255, 165, 0, 1);
+    background-color: rgba(75, 0, 130);
     width: 100%;
     padding-top: 60px;
     margin-top: 100px;
