--- a/TravelAgency/TravelAgency/wwwroot/css/home.css
+++ b/TravelAgency/TravelAgency/wwwroot/css/home.css
@@ -37,7 +37,7 @@
 .card {
     min-width: calc(33.33% - 20px); /* Три карточки в ряд */
     margin: 10px;
-    background-color: rgba(255, 165, 3, 1); /* Прозрачный фоновый цвет */
+    background-color: rgba(233, 150, 122); /* Прозрачный фоновый цвет */
     border: 1px solid #ccc;
     border-radius: 5px;
     overflow: hidden;
